...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:fontFamily="@font/skranji" />

    <TextView
        android:id="@+id/sailorPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="325dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="210dp"
...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:fontFamily="@font/skranji" />

    <Button
        android:id="@+id/sailorMinus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="0dp"
...
        android:textSize="10sp"
        android:visibility="visible"
        app:fontFamily="@font/skranji"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/sailorPlus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="370dp"
        android:layout_marginLeft="0dp"
...
