...
                        android:textSize="35sp"
                        android:visibility="visible"
                        app:fontFamily="@font/skranji" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/two"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/one"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="#F9DFA2"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="false"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="9dp"
                        android:lineSpacingExtra="10sp"
                        android:text="Fresh Water"
                        android:textAllCaps="false"
                        android:textColor="#FFFDFD"
                        android:textSize="20sp"
                        android:visibility="visible"
                        app:fontFamily="@font/skranji"
                        android:layout_marginStart="5dp" />
...
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textbox">

            <Button
                android:id="@+id/sellButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="BAG" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
...
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textbox"
            android:visibility="gone">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="10sp"
...
